// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HvImageCarousel> sample snapshot testing ImageCarouselXS 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-1 HvIsCardGridElement HvCard-root"
    style="width: 350px;"
  >
    <div
      class="HvCard-semanticContainer"
    >
      <div
        class="HvCard-semanticBar HvCard-sema0"
      />
      <div
        class="HvCard-icon"
      />
    </div>
    <div
      aria-label="Compressor"
      class="MuiCardHeader-root HvCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title HvCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
        >
          Image Carousel
        </span>
      </div>
    </div>
    <div
      class="MuiCardMedia-root HvCardMedia-root"
      role="img"
    >
      <div
        class="MuiContainer-root HvContainer-root HvImageCarousel-root xs MuiContainer-maxWidthXl HvContainer-maxWidthXl"
        id="hvcarousel4-container"
      >
        <div
          class="MuiContainer-root HvContainer-root HvImageCarousel-imageContainer notFullscreen MuiContainer-maxWidthXl HvContainer-maxWidthXl"
        >
          <div
            class="MuiBox-root MuiBox-root-5 HvImageCarousel-stack xs HvPanel-root"
            id="hvcarousel4-bigPanel"
          >
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-DarthVader4"
            >
              <img
                alt="hvcarousel4-DarthVader4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-BobaFett4"
            >
              <img
                alt="hvcarousel4-BobaFett4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-Revan4"
            >
              <img
                alt="hvcarousel4-Revan4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-TheMandalorian4"
            >
              <img
                alt="hvcarousel4-TheMandalorian4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-Anakin4"
            >
              <img
                alt="hvcarousel4-Anakin4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-Ahsoka4"
            >
              <img
                alt="hvcarousel4-Ahsoka4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-ObiWan4"
            >
              <img
                alt="hvcarousel4-ObiWan4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-Mace4"
            >
              <img
                alt="hvcarousel4-Mace4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
            <div
              class="makeStyles-imageBox-3"
              id="hvcarousel4-Yoda4"
            >
              <img
                alt="hvcarousel4-Yoda4"
                class="HvImageCarousel-selectedImage xs notFullscreen contain"
                src="test-file-stub"
                style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              />
            </div>
          </div>
          <div
            class="HvImageCarousel-lowButtons"
          >
            <div>
              <button
                aria-label="Backwards"
                class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvImageCarousel-button HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
                style="opacity: 0; visibility: hidden;"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <div
                    class="HvIconBase-root HvIconBase-s"
                    name="Backwards"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M11.30863 15.5L4 8 11.30863.5 12 1.30536 5.38272 8 12 14.79529z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </span>
              </button>
            </div>
            <div>
              <button
                aria-label="Forwards"
                class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvImageCarousel-button HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
                style="opacity: 0; visibility: hidden;"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <div
                    class="HvIconBase-root HvIconBase-s"
                    name="Forwards"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M4.79011 15.5L4 14.79529 10.61729 8 4 1.30536 4.79011.5 12 8z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </span>
              </button>
            </div>
          </div>
          <div
            class="HvImageCarousel-xsCircles"
          >
            <span
              class="HvImageCarousel-xsSelectedCircle"
              title="BigCircle"
            />
            <span
              class="HvImageCarousel-miniCircle"
              title="Circle"
            />
            <span
              class="HvImageCarousel-miniCircle"
              title="Circle"
            />
            <span
              class="HvImageCarousel-miniCircle"
              title="Circle"
            />
            <span
              class="HvImageCarousel-miniCircle"
              title="Circle"
            />
          </div>
          <div
            class="HvImageCarousel-divCounter"
          >
            <span
              class="HvImageCarousel-counter"
            >
              <p
                class="HvTypography-root HvTypography-normalText"
                style="color: white;"
              >
                1/9
              </p>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiCardContent-root HvCardContent-content"
    >
      <div
        style="padding-top: 20px;"
      >
        <p
          class="HvTypography-root HvTypography-highlightText"
        >
          ID
        </p>
        <p
          class="HvTypography-root HvTypography-normalText"
        >
          2101cad3-7cd4-1000-bdp95-d8c497176e7c
        </p>
      </div>
      <div
        style="margin-top: 20px;"
      >
        <p
          class="HvTypography-root HvTypography-highlightText"
        >
          Last connected
        </p>
        <p
          class="HvTypography-root HvTypography-normalText"
        >
          Aug 30, 2017 12:27:53 PM
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvImageCarousel> sample snapshot testing LowCardinality 1`] = `
<div>
  <div
    class="MuiContainer-root HvContainer-root HvImageCarousel-root nxs MuiContainer-maxWidthXl HvContainer-maxWidthXl"
    id="hvcarousel3-container"
  >
    <div
      class="HvImageCarousel-title"
    >
      <div>
        <p
          class="HvTypography-root HvTypography-xsTitle"
        >
          Landscapes
        </p>
      </div>
      <div>
        <button
          aria-label="Fullscreen"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Fullscreen"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M16 .0022v4.49829l-1.00006-.00012-.00006-2.79309-4.6463 4.64624-.7071-.707L14.293 1h-2.7934V0h4.49817v.00208zM4.50049 1l-.00006-1H.00226l.00006.00208L0 .0022V.707l.00006 3.79349 1-.00012.00006-2.79309 4.64636 4.64624.7071-.707L1.707 1zm10.49939 13.29272l-4.6463-4.64624-.7071.707L14.293 15h-2.7934v1h4.49817v-.0022H16v-4.49829h-1.00006zm-9.3534-4.64624l-4.64636 4.64624-.00006-2.79321h-1L0 15.293v.70483h.00232L.00226 16h4.49817l.00006-1H1.707l4.64655-4.64648z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiContainer-root HvContainer-root HvImageCarousel-imageContainer notFullscreen nxs MuiContainer-maxWidthXl HvContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-4 HvImageCarousel-stack nxs HvPanel-root"
        id="hvcarousel3-bigPanel"
      >
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape1"
        >
          <img
            alt="hvcarousel3-Landscape1"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://www.picturecorrect.com/wp-content/uploads/2016/11/landscape-photography-components.jpg"
            style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape2"
        >
          <img
            alt="hvcarousel3-Landscape2"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://images.theconversation.com/files/125391/original/image-20160606-13080-s7o3qu.jpg?ixlib=rb-1.1.0&rect=273%2C0%2C2639%2C1379&q=45&auto=format&w=926&fit=clip"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape3"
        >
          <img
            alt="hvcarousel3-Landscape3"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://static.photocdn.pt/images/articles/2017/04/28/iStock-546424192.jpg"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape4"
        >
          <img
            alt="hvcarousel3-Landscape4"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://images.squarespace-cdn.com/content/v1/59ef2d3c9f8dce981401a30d/1592002341643-UCT10ZFLQ5GCJU8L1OVY/colorful+landscapes.jpg?format=1000w"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape5"
        >
          <img
            alt="hvcarousel3-Landscape5"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://blog.nzibs.co.nz/wp-content/uploads/2020/02/Landscape-1280x640.jpg"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape6"
        >
          <img
            alt="hvcarousel3-Landscape6"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://photographylife.com/wp-content/uploads/2016/06/Mass.jpg"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape7"
        >
          <img
            alt="hvcarousel3-Landscape7"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://static.photocdn.pt/images/articles/2018/08/20/articles/2017_8/easy_landscape_photography_tips.jpg"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape8"
        >
          <img
            alt="hvcarousel3-Landscape8"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://images.squarespace-cdn.com/content/v1/56873b617086d7b18180c450/1570074633822-7J1FRR7Y80XR9A25DMFA/DSC_1341-Pano-Edit-2-Edit-Edit-Edit.jpg?format=1000w"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape9"
        >
          <img
            alt="hvcarousel3-Landscape9"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://i1.adis.ws/i/canon/pro-landscape-photography-business-2_b76782acce404672b7d351dc98937699?$media-collection-full-dt-jpg$"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel3-Landscape10"
        >
          <img
            alt="hvcarousel3-Landscape10"
            class="HvImageCarousel-selectedImage nxs notFullscreen cover"
            src="https://cdn.photographycourse.net/wp-content/uploads/2014/11/Landscape-Photography-steps.jpg"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
      </div>
      <div
        class="HvImageCarousel-lowButtons nxs"
      >
        <div>
          <button
            aria-label="Backwards"
            class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvImageCarousel-button HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
            style="opacity: 0; visibility: hidden;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <div
                class="HvIconBase-root HvIconBase-s"
                name="Backwards"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M11.30863 15.5L4 8 11.30863.5 12 1.30536 5.38272 8 12 14.79529z"
                    fill="#414141"
                  />
                </svg>
              </div>
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="Forwards"
            class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvImageCarousel-button HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
            style="opacity: 0; visibility: hidden;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <div
                class="HvIconBase-root HvIconBase-s"
                name="Forwards"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M4.79011 15.5L4 14.79529 10.61729 8 4 1.30536 4.79011.5 12 8z"
                    fill="#414141"
                  />
                </svg>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="HvImageCarousel-circles"
    >
      <span
        class="HvImageCarousel-selectedCircle"
        title="BigCircle 0"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 1"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 2"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 3"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 4"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 5"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 6"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 7"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 8"
      />
      <span
        class="HvImageCarousel-miniCircle"
        title="Circle 9"
      />
    </div>
    <div
      class="MuiBox-root MuiBox-root-5 HvImageCarousel-panel HvPanel-root"
      id="hvcarousel3-panel"
    >
      <div
        class="HvStack-root HvStack-row HvStack-xs"
      >
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape1"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape1"
                class="HvImageCarousel-thumbnailSelected"
                src="https://www.picturecorrect.com/wp-content/uploads/2016/11/landscape-photography-components.jpg"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape2"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape2"
                class="HvImageCarousel-img"
                src="https://images.theconversation.com/files/125391/original/image-20160606-13080-s7o3qu.jpg?ixlib=rb-1.1.0&rect=273%2C0%2C2639%2C1379&q=45&auto=format&w=926&fit=clip"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape3"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape3"
                class="HvImageCarousel-img"
                src="https://static.photocdn.pt/images/articles/2017/04/28/iStock-546424192.jpg"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape4"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape4"
                class="HvImageCarousel-img"
                src="https://images.squarespace-cdn.com/content/v1/59ef2d3c9f8dce981401a30d/1592002341643-UCT10ZFLQ5GCJU8L1OVY/colorful+landscapes.jpg?format=1000w"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape5"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape5"
                class="HvImageCarousel-img"
                src="https://blog.nzibs.co.nz/wp-content/uploads/2020/02/Landscape-1280x640.jpg"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape6"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape6"
                class="HvImageCarousel-img"
                src="https://photographylife.com/wp-content/uploads/2016/06/Mass.jpg"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape7"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape7"
                class="HvImageCarousel-img"
                src="https://static.photocdn.pt/images/articles/2018/08/20/articles/2017_8/easy_landscape_photography_tips.jpg"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape8"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape8"
                class="HvImageCarousel-img"
                src="https://images.squarespace-cdn.com/content/v1/56873b617086d7b18180c450/1570074633822-7J1FRR7Y80XR9A25DMFA/DSC_1341-Pano-Edit-2-Edit-Edit-Edit.jpg?format=1000w"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape9"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape9"
                class="HvImageCarousel-img"
                src="https://i1.adis.ws/i/canon/pro-landscape-photography-business-2_b76782acce404672b7d351dc98937699?$media-collection-full-dt-jpg$"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Landscape10"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Landscape10"
                class="HvImageCarousel-img"
                src="https://cdn.photographycourse.net/wp-content/uploads/2014/11/Landscape-Photography-steps.jpg"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvImageCarousel> sample snapshot testing Main 1`] = `
<div>
  <div
    class="MuiContainer-root HvContainer-root HvImageCarousel-root nxs MuiContainer-maxWidthXl HvContainer-maxWidthXl"
    id="hvcarousel1-container"
  >
    <div
      class="HvImageCarousel-title"
    >
      <div>
        <p
          class="HvTypography-root HvTypography-xsTitle"
        >
          Star Wars Characters
        </p>
      </div>
    </div>
    <div
      class="MuiContainer-root HvContainer-root HvImageCarousel-imageContainer notFullscreen nxs MuiContainer-maxWidthXl HvContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-4 HvImageCarousel-stack nxs HvPanel-root"
        id="hvcarousel1-bigPanel"
      >
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-DarthVader"
        >
          <img
            alt="hvcarousel1-DarthVader"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-BobaFett"
        >
          <img
            alt="hvcarousel1-BobaFett"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-Revan"
        >
          <img
            alt="hvcarousel1-Revan"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-TheMandalorian"
        >
          <img
            alt="hvcarousel1-TheMandalorian"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-Anakin"
        >
          <img
            alt="hvcarousel1-Anakin"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-Ahsoka"
        >
          <img
            alt="hvcarousel1-Ahsoka"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-ObiWan"
        >
          <img
            alt="hvcarousel1-ObiWan"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-Mace"
        >
          <img
            alt="hvcarousel1-Mace"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel1-Yoda"
        >
          <img
            alt="hvcarousel1-Yoda"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root HvImageCarousel-normalButtons MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Backwards"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Backwards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M11.30863 15.5L4 8 11.30863.5 12 1.30536 5.38272 8 12 14.79529z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <a
          class="HvTypography-root HvTypography-highlightText"
        >
          1
        </a>
        <a
          class="HvTypography-root HvTypography-normalText"
        >
           /  9
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Forwards"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Forwards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M4.79011 15.5L4 14.79529 10.61729 8 4 1.30536 4.79011.5 12 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-5 HvImageCarousel-panel HvPanel-root"
      id="hvcarousel1-panel"
    >
      <div
        class="HvStack-root HvStack-row HvStack-xs"
      >
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="DarthVader"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="DarthVader"
                class="HvImageCarousel-thumbnailSelected"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="BobaFett"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="BobaFett"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Revan"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Revan"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="TheMandalorian"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="TheMandalorian"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Anakin"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Anakin"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Ahsoka"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Ahsoka"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="ObiWan"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="ObiWan"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Mace"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Mace"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
        <div
          class="child HvFocus-root child"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text HvImageCarousel-thumbnailButton"
            id="Yoda"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <img
                alt="Yoda"
                class="HvImageCarousel-img"
                src="test-file-stub"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvImageCarousel> sample snapshot testing WithoutThumbnails 1`] = `
<div>
  <div
    class="MuiContainer-root HvContainer-root HvImageCarousel-root nxs MuiContainer-maxWidthXl HvContainer-maxWidthXl"
    id="hvcarousel2-container"
  >
    <div
      class="HvImageCarousel-title"
    >
      <div />
    </div>
    <div
      class="MuiContainer-root HvContainer-root HvImageCarousel-imageContainer notFullscreen nxs MuiContainer-maxWidthXl HvContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-4 HvImageCarousel-stack nxs HvPanel-root"
        id="hvcarousel2-bigPanel"
      >
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-DarthVader2"
        >
          <img
            alt="hvcarousel2-DarthVader2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-BobaFett2"
        >
          <img
            alt="hvcarousel2-BobaFett2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-Revan2"
        >
          <img
            alt="hvcarousel2-Revan2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-TheMandalorian2"
        >
          <img
            alt="hvcarousel2-TheMandalorian2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-Anakin2"
        >
          <img
            alt="hvcarousel2-Anakin2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-Ahsoka2"
        >
          <img
            alt="hvcarousel2-Ahsoka2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-ObiWan2"
        >
          <img
            alt="hvcarousel2-ObiWan2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-Mace2"
        >
          <img
            alt="hvcarousel2-Mace2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
        <div
          class="makeStyles-imageBox-2"
          id="hvcarousel2-Yoda2"
        >
          <img
            alt="hvcarousel2-Yoda2"
            class="HvImageCarousel-selectedImage nxs notFullscreen contain"
            src="test-file-stub"
            style="opacity: 0; visibility: hidden;"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root HvImageCarousel-normalButtons MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Backwards"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvImageCarousel-hidden HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Backwards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M11.30863 15.5L4 8 11.30863.5 12 1.30536 5.38272 8 12 14.79529z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <a
          class="HvTypography-root HvTypography-highlightText"
        >
          1
        </a>
        <a
          class="HvTypography-root HvTypography-normalText"
        >
           /  9
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Forwards"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Forwards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M4.79011 15.5L4 14.79529 10.61729 8 4 1.30536 4.79011.5 12 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
